test/scc_test/stmt/semantic-errors/026.t
void test()
{
    switch(10)
        default:
            int a;
}